FluxView and PostView in one view, word-wrap:break-word added, button fixed.

--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -107,3 +107,5 @@ li {
 .ticket-color{
     background-color: #E4BF7E;
 }
+
+p{ word-wrap: break-word; }
